fix center alignment of checkbox in the dropdown

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1712,7 +1712,7 @@ p {
   padding-left: 3rem;
 }
 
-.input-field .dropdown-content [type="checkbox"]+label {
-  top: 0; /* previously 1px; */
-  display: inline; /* previously inherits `display: inline-block;` from `[type="checkbox"]+label` */
+.input-field.col .dropdown-content [type="checkbox"]+label {
+  top: 0!important; /* previously 1px; */
+  display: inline!important; /* previously inherits `display: inline-block;` from `[type="checkbox"]+label` */
 }
